--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ DB_Name = studentdb
 DB_User = root
 DB_Password = P3rf0rm@nc3
 DB_Host = localhost
+SECRETPASS = aJYFkjjhgJkjgMJBBkmgjbjmnvKMGmbmhgJGMBjgmnfvKJGmkvbKG
 # DB_Dialet = mysql v8.4.0
